--- a/src/components/res/view/new-blog/res/view/blog-card/blog-card.css
+++ b/src/components/res/view/new-blog/res/view/blog-card/blog-card.css
@@ -7,12 +7,13 @@
   height: 210px;
   background-size: cover;
   border-radius: 3px;
-  background-image: url("https://via.placeholder.com/310");
 }
 
 .blog-card {
   width: 310px;
   margin: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .blog-category {
