--- a/src/components/s-saqhan-chat-app/res/view/s-saqhan-chat-files-wrapper/res/view/s-saqhan-chat-form-search-files/s-saqhan-chat-form-search-files.css
+++ b/src/components/s-saqhan-chat-app/res/view/s-saqhan-chat-files-wrapper/res/view/s-saqhan-chat-form-search-files/s-saqhan-chat-form-search-files.css
@@ -15,8 +15,8 @@
   align-items: center;
 }
 
-.input-search {
-  width: 64%;
+.input-search-files {
+  width: 80%;
   border-radius: 3px;
   border: none;
   background-color: #ececec;
