--- a/src/components/s-saqhan-chat-app/res/view/s-saqhan-chat-users-wrapper/s-saqhan-chat-users-wrapper.css
+++ b/src/components/s-saqhan-chat-app/res/view/s-saqhan-chat-users-wrapper/s-saqhan-chat-users-wrapper.css
@@ -6,13 +6,16 @@
 
 @media (max-width: 414px) {
   .chat-wrap {
-    height: 78vh;
+    height: 76vh;
   }
 }
 
 @media (max-width: 375px) {
   .chat-wrap {
-    height: 76vh;
+    height: 78vh;
+  }
+  .chat-files .block-input::before {
+    left: 13px;
   }
 }
 
@@ -21,8 +24,9 @@
   .chat-wrap {
     height: 72vh;
   }
+  
   .block-input {
-    margin-left: 25px;
+    text-align: center;
   }
 }
 
@@ -33,3 +37,23 @@
     height: 72vh;
   }
 }
+
+@media (height: 1024px) and (width: 768px ) {
+  .chat-wrap {
+    height: 68vh;
+  }
+}
+@media (max-width: 375px) and (max-height: 667px) {
+  .chat-wrap {
+    height: 74vh;
+  }
+}
+
+@media (max-width: 320px) and (max-height: 568px) {
+  .chat-wrap {
+    height: 68vh;
+  }
+
+}
+
+
