--- a/src/components/res/view/s-saqhan-header-app/s-saqhan-header-app.css
+++ b/src/components/res/view/s-saqhan-header-app/s-saqhan-header-app.css
@@ -1,10 +1,10 @@
-:host {
-  display: block;
-}
 
 /* header */
-.navbar-brand img {
+.logo-header  {
   width: 125px;
+  height: 30px;
+  background-position: center;
+  background-size: cover;
 }
 
 .btn-custom-head {
@@ -22,4 +22,10 @@ header {
   header {
     margin-top: 20px;
   }
+}
+
+
+
+.nav-link.header {
+  cursor: pointer;
 }
