--- a/src/components/s-saqhan-component/res/view/s-saqhan-first-slider/res/view/s-saqhan-main-news-card/s-saqhan-main-news-card.css
+++ b/src/components/s-saqhan-component/res/view/s-saqhan-first-slider/res/view/s-saqhan-main-news-card/s-saqhan-main-news-card.css
@@ -1,25 +1,17 @@
-:host {
-  display: block;
-}
-
-.img-news {
-  background-image: url("https://via.placeholder.com/635x308?text=Visit");
-}
-
 .btn-custom {
   padding: 10px 20px;
   font-size: 12px;
   border-radius: 10px;
 }
 
-.btn-read a {
+.btn-read span {
   color: #000000;
   font-weight: 700;
   transition: 0.3s all;
   border-bottom: 1px solid #000;
 }
 
-.btn-read a:hover {
+.btn-read span:hover {
   text-decoration: none;
   color: #007bff;
   border-bottom: 1px solid #007bff;
@@ -31,6 +23,7 @@
 .img-news {
   height: 308px;
   background-size: cover;
+  background-position: center;
 }
 
 .img-news img {
