--- a/src/components/res/view/s-saqhan-header-app/s-saqhan-header-app.css
+++ b/src/components/res/view/s-saqhan-header-app/s-saqhan-header-app.css
@@ -14,6 +14,15 @@
   margin-left: -20px;
 }
 
+.header-nav {
+  justify-content: space-between;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+}
+
 header {
   margin-top: 50px;
 }
