--- a/src/components/s-saqhan-component/res/view/s-saqhan-popular-news/res/view/s-saqhan-popular-card/s-saqhan-popular-card.css
+++ b/src/components/s-saqhan-component/res/view/s-saqhan-popular-news/res/view/s-saqhan-popular-card/s-saqhan-popular-card.css
@@ -22,7 +22,7 @@
   background-position: center;
   border-radius: 3px;
   margin-right: 30px;
-  background-image: url("https://via.placeholder.com/500");
+  background-image: url("https://via.placeholder.com/500x500?text=Popular");
 }
 
 .lenta-title {
