--- a/src/components/res/view/s-saqhan-app-footer/s-saqhan-app-footer.css
+++ b/src/components/res/view/s-saqhan-app-footer/s-saqhan-app-footer.css
@@ -23,7 +23,8 @@
 }
 
 .footer-title {
-  margin-bottom: 35px;
+  margin-bottom: 10px;
+  margin-top: 5px;
   color: #39374d;
   font-size: 18px;
   font-weight: 500;
