--- a/src/components/s-saqhan-component/res/view/s-saqhan-events-blog/res/view/s-saqhan-event-card/s-saqhan-event-card.css
+++ b/src/components/s-saqhan-component/res/view/s-saqhan-events-blog/res/view/s-saqhan-event-card/s-saqhan-event-card.css
@@ -27,5 +27,9 @@
     text-align: center;
   }
 }
-@media (max-width: 375px) {
+@media (max-width: 320px) {
+  .blog-img {
+    width: 100%;
+  }
 }
+
