--- a/src/components/res/view/s-saqhan-app-footer/s-saqhan-app-footer.css
+++ b/src/components/res/view/s-saqhan-app-footer/s-saqhan-app-footer.css
@@ -16,6 +16,9 @@
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
 }
+.custom-links {
+  cursor: pointer;
+}
 
 .footer-info-number {
   color: #007bff;
