--- a/src/components/s-saqhan-component/res/view/s-saqhan-first-slider/res/view/s-saqhan-main-news-card/s-saqhan-main-news-card.css
+++ b/src/components/s-saqhan-component/res/view/s-saqhan-first-slider/res/view/s-saqhan-main-news-card/s-saqhan-main-news-card.css
@@ -43,6 +43,19 @@
   font-weight: 600;
 }
 
+.title-news {
+  margin-top: 10px;
+  font-weight: 600;
+}
+
+.category-main {
+  margin-top: 15px;
+}
+
+.sub-title-news {
+  margin: 30px 0px;
+}
+
 .btn-read a {
   color: #000000;
   font-weight: 700;
