--- a/src/components/s-saqhan-component/res/view/s-saqhan-events-blog/res/view/s-saqhan-event-card/s-saqhan-event-card.css
+++ b/src/components/s-saqhan-component/res/view/s-saqhan-events-blog/res/view/s-saqhan-event-card/s-saqhan-event-card.css
@@ -6,6 +6,11 @@
   margin-bottom: 20px;
 }
 
+.blog-title {
+  margin-top: 10px;
+  font-weight: 600;
+}
+
 .date-event {
   padding: 10px;
   background-color: #fff;
@@ -27,6 +32,12 @@
     text-align: center;
   }
 }
+@media (max-width: 375px) {
+  .blog-img {
+    width: 100%;
+  }
+}
+
 @media (max-width: 320px) {
   .blog-img {
     width: 100%;
