--- a/src/components/res/view/s-saqhan-header-app/s-saqhan-header-app.css
+++ b/src/components/res/view/s-saqhan-header-app/s-saqhan-header-app.css
@@ -7,6 +7,10 @@
   background-size: cover;
 }
 
+.custom-links {
+  cursor: pointer;
+}
+
 .btn-custom-head {
   padding: 2px 10px ;
   font-size: 12px;
