--- a/src/components/s-saqhan-chat-app/res/view/s-saqhan-chat-users-wrapper/s-saqhan-chat-users-wrapper.css
+++ b/src/components/s-saqhan-chat-app/res/view/s-saqhan-chat-users-wrapper/s-saqhan-chat-users-wrapper.css
@@ -1,5 +1,6 @@
 .chat-wrap {
   width: 100%;
+  /*height: calc(100vh - 310px);*/
   height: 65vh;
   overflow: overlay;
 }
@@ -24,7 +25,7 @@
   .chat-wrap {
     height: 72vh;
   }
-  
+
   .block-input {
     text-align: center;
   }
