--- a/src/components/s-saqhan-component/res/view/s-saqhan-first-slider/res/view/s-saqhan-main-news-card/s-saqhan-main-news-card.css
+++ b/src/components/s-saqhan-component/res/view/s-saqhan-first-slider/res/view/s-saqhan-main-news-card/s-saqhan-main-news-card.css
@@ -26,13 +26,8 @@
   height: 308px;
   background-size: cover;
   background-position: center;
+  border-radius: 3px;
 }
-
-.img-news img {
-  width: 100%;
-  height: 315px;
-}
-
 .btn-custom {
   padding: 10px 20px;
   font-size: 12px;
@@ -70,10 +65,6 @@
   cursor: context-menu;
 }
 
-
-
-
-
 @media (max-width: 414px) {
 }
 
@@ -81,15 +72,12 @@
 }
 
 @media (max-width: 768px) {
-
   .main-news {
     margin-bottom: 20px;
   }
-
 }
 
 @media (max-width: 992px) {
-
   .img-news img {
     height: auto;
   }
